# schema-forge

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/cli/: command_menu.rs  commands.rs  mod.rs  repl.rs  tui.rs
src/config/: mod.rs  storage.rs
src/database/: cache.rs  connection.rs  indexer.rs  manager.rs  mod.rs  schema.rs
src/llm/: client.rs  mod.rs  provider.rs
src/llm/providers/: anthropic.rs  cohere.rs  groq.rs  minimax.rs  ollama.rs  openai.rs  qwen.rs  xai.rs  zai.rs
tests/: integration_test.rs
tests/integration/: mod.rs
tests/unit/: mod.rs
