[package]
name = "schema-forge"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Yasser <arafath.yasser@gmail.com>"]
description = "An intelligent CLI-based database agent with interactive REPL and LLM integration"
license = "MIT"
repository = "https://github.com/YASSERRMD/schema-forge"
readme = "README.md"
keywords = ["cli", "database", "sql", "llm", "agent"]
categories = ["command-line-utilities", "database"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Database support
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "any"] }
tiberius = { version = "0.12", default-features = false, features = ["tokio-rustls", "sql-browser-tokio"] }

# CLI & REPL
rustyline = "14.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async traits
async-trait = "0.1"

# Environment variables
dotenv = "0.15"

# Table formatting for output
comfy-table = "7.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "schema-forge"
path = "src/main.rs"
